Fix spacing of dialog elements

--- a/src/sass/components/_dialog.scss
+++ b/src/sass/components/_dialog.scss
@@ -17,7 +17,8 @@
 
 .md-dialog {
     $parent: &;
-    $padding: 24px;
+    $large-padding: 24px;
+    $small-padding: 16px;
 
     z-index: 1;
     display: flex;
@@ -38,8 +39,8 @@
     &__wrapper {
         min-width: 280px;
         max-width: 560px;
-        margin: calc($padding * 2);
-        padding: $padding;
+        margin: calc($large-padding * 2);
+        padding: $large-padding;
         border-radius: sys("shape", "corner", "extra-large");
 
         @include themes.themify {
@@ -53,13 +54,13 @@
         display: flex;
         flex-flow: column nowrap;
         align-items: center;
-        padding-bottom: 16px;
+        padding-bottom: $small-padding;
     }
 
     &__icon {
         @include square(24px, true);
 
-        padding-bottom: 16px;
+        padding-bottom: $small-padding;
 
         @include themes.themify {
             color: themes.color("secondary");
@@ -81,22 +82,19 @@
     }
 
     &__content {
-        padding-bottom: $padding;
+        display: flex;
+        flex-flow: column wrap;
+        gap: $small-padding;
 
         @include font-styling("body-medium");
 
         @include themes.themify {
             color: themes.color("on-surface-variant");
         }
-
-        &:has(+ #{$parent}__divider) {
-            padding-bottom: 0;
-        }
     }
 
     &__divider {
         height: 1px;
-        margin: 16px 0;
         border: 0;
 
         @include themes.themify {
@@ -106,6 +104,7 @@
 
     &__actions {
         display: flex;
+        margin-top: 16px;
         flex-flow: row nowrap;
         gap: 8px;
         align-items: center;
